src/test/data/psi_tree/valid_contracts/pair.tz
code {
       PUSH (pair int int) (Pair 123 123);
     }