src/test/data/psi_tree/syntax_errors/pair.tz
code {
       PUSH (pair int int) (Pair int int);
       PUSH (pair int int) (Pair 123 123);
       DROP;
       CDR;
       NIL operation;
       PAIR;
     }